<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="devpaul.business.empresaexample.vista.Fragments.PasteleriaPackage.PasteleriaReservar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="15dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="4dp"
                android:background="#66000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Titulo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/josefinsans_regular"
                    android:gravity="center"
                    android:text="@string/reservar"
                    android:textSize="25sp">

                </TextView>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="4dp"
                android:background="#66000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/datos_personales"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/campo_nombre"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli"
                        android:autofillHints="name"
                        android:hint="@string/nombre"
                        android:textSize="15sp"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/campo_apellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:fontFamily="@font/muli"
                        android:autofillHints="name"
                        android:textSize="15sp"
                        android:hint="@string/apellidos"
                        android:inputType="text"
                        android:singleLine="true"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_field4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/campo_celular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:textSize="15sp"
                        android:hint="@string/tel_celular"
                        android:fontFamily="@font/muli"
                        android:inputType="number"
                        android:singleLine="true"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/campo_numero_casa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:hint="@string/tel_opcional"
                        android:textSize="15sp"
                        android:fontFamily="@font/muli"
                        android:inputType="number"
                        android:singleLine="true"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/campo_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:textSize="15sp"
                    android:autofillHints="postalAddress"
                    android:fontFamily="@font/muli"
                    android:hint="@string/direcci_n"
                    android:inputType="text"
                    android:singleLine="true"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/muli"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
                android:gravity="center_vertical"
                android:hint="@string/selecciona_distrito"
                android:padding="12dp"
                tools:ignore="TextContrastCheck" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:background="#66000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="4dp"

                android:fontFamily="@font/opensans_bold"
                android:text="@string/datos_del_producto"
                android:textSize="15sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/campo_nombre_producto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="no"
                    android:focusable="false"
                    android:textSize="15sp"
                    android:fontFamily="@font/muli"
                    android:hint="@string/producto"
                    android:inputType="text"
                    android:singleLine="true"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_Field6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/campo_tipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="no"
                        android:ems="8"
                        android:fontFamily="@font/muli"
                        android:focusable="false"
                        android:textSize="15sp"
                        android:hint="@string/tipo"
                        android:inputType="text"
                        android:singleLine="true"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textField7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/campo_precio_prodducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:autofillHints="no"
                        android:ems="10"
                        android:textSize="15sp"
                        android:fontFamily="@font/muli"
                        android:focusable="false"
                        android:hint="@string/precio"
                        android:inputType="number"
                        android:singleLine="true"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli"
                    android:text="@string/metodo_de_pago"
                    android:textSize="15sp"/>

                <CheckBox
                    android:id="@+id/check_efectivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli"
                    android:textSize="15sp"
                    android:text="@string/post_entrega"
                    tools:ignore="TouchTargetSizeCheck" />

                <CheckBox
                    android:id="@+id/check_tarjeta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli"
                    android:textSize="15sp"
                    android:text="@string/pre_entrega"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_comprar"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli"
                    android:text="@string/reservar"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

                <Button
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli"
                    android:text="@string/regresar"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>

        </LinearLayout>



    </ScrollView>


</LinearLayout>