<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    tools:context="devpaul.business.empresaexample.vista.Fragments.CafeteriaPackage.CafeteriaPosteriorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ActionBarStyle">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/img_principal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerInParent="true"
                            android:background="@drawable/principal"
                            android:contentDescription="@string/todo"
                            tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,ImageContrastCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentBottom="true"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_toEndOf="@id/img_principal"
                            android:paddingBottom="4dp"
                            android:text="@string/cafeteria"
                            android:textAppearance="@style/TitulosActionBar" />

                    </RelativeLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/titleTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/titulo"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:text="@string/producto"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/descriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/muli"
                android:gravity="center"
                android:text="@string/texto_base"
                android:textSize="18sp" />

            <View
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#66000000"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:text="@string/precio_s"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/priceTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="0.8dp"
                android:layout_marginTop="8dp"
                android:background="#66000000"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:text="@string/estado"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/stateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli"
                    android:textSize="17sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="0.8dp"
                android:layout_marginTop="8dp"
                android:background="#66000000"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/link_recetas"
                    android:textSize="15sp">

                </TextView>

                <Button
                    android:id="@+id/btn_receta_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:text="@string/presiona_aqu"
                    android:textAppearance="@style/Sub_Sub_Titulos"
                    android:textColor="@color/blue_primary_dark">

                </Button>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</androidx.cardview.widget.CardView>