<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:hint="@string/titulo"
                android:textColor="@color/gray_deep"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


            <View
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="#66000000"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tv_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/muli"
                android:hint="@string/descripcion"
                android:textColor="@color/gray_deep"
                android:textSize="15sp"

                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/img_imagen"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tv_precio"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <TextView
                android:id="@+id/tv_masdescripcion"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view_cero"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#66000000"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


</LinearLayout>
